--- a/src/LudusaviPlayniteSettingsView.xaml
+++ b/src/LudusaviPlayniteSettingsView.xaml
@@ -6,18 +6,25 @@
              mc:Ignorable="d"
              d:DesignHeight="400" d:DesignWidth="600">
     <StackPanel>
-        <StackPanel Margin="10">
+        <StackPanel Margin="15">
             <TextBlock Text="{Binding ExecutablePath_Label}" />
-            <TextBox Text="{Binding ExecutablePath}" />
+            <TextBox Margin="0,2,0,0" Text="{Binding ExecutablePath}" />
         </StackPanel>
 
-        <StackPanel Margin="10">
+        <StackPanel Margin="15">
             <TextBlock Text="{Binding BackupPath_Label}" />
-            <TextBox Text="{Binding BackupPath}" />
+            <TextBox Margin="0,2,0,0" Text="{Binding BackupPath}" />
         </StackPanel>
 
-        <CheckBox Margin="10" IsChecked="{Binding DoBackupOnGameStopped}" Content="{Binding DoBackupOnGameStopped_Label}" />
+        <StackPanel Margin="15">
+            <CheckBox IsChecked="{Binding DoBackupOnGameStopped}" Content="{Binding DoBackupOnGameStopped_Label}" />
+            <CheckBox Margin="25,2,0,0" IsChecked="{Binding AskBackupOnGameStopped}" Content="{Binding AskBackupOnGameStopped_Label}" />
+            <CheckBox Margin="25,2,0,0" IsChecked="{Binding OnlyBackupOnGameStoppedIfPc}" Content="{Binding OnlyBackupOnGameStoppedIfPc_Label}" />
+        </StackPanel>
 
-        <CheckBox Margin="10" IsChecked="{Binding AskBackupOnGameStopped}" Content="{Binding AskBackupOnGameStopped_Label}" />
+        <StackPanel Margin="15">
+            <CheckBox IsChecked="{Binding AddSuffixForNonPcGameNames}" Content="{Binding AddSuffixForNonPcGameNames_Label}" />
+            <TextBox Margin="0,2,0,0" Text="{Binding SuffixForNonPcGameNames}" />
+        </StackPanel>
     </StackPanel>
 </UserControl>
