--- a/src/LudusaviPlayniteSettingsView.xaml
+++ b/src/LudusaviPlayniteSettingsView.xaml
@@ -24,7 +24,8 @@
 
         <StackPanel Margin="15">
             <CheckBox IsChecked="{Binding AddSuffixForNonPcGameNames}" Content="{Binding AddSuffixForNonPcGameNames_Label}" />
-            <TextBox Margin="0,2,0,0" Text="{Binding SuffixForNonPcGameNames}" />
+            <TextBox Margin="25,2,0,0" Text="{Binding SuffixForNonPcGameNames}" />
+            <CheckBox Margin="0,2,0,0" IsChecked="{Binding RetryNonPcGamesWithoutSuffix}" Content="{Binding RetryNonPcGamesWithoutSuffix_Label}" />
         </StackPanel>
     </StackPanel>
 </UserControl>
