--- a/src/LudusaviPlayniteSettingsView.xaml
+++ b/src/LudusaviPlayniteSettingsView.xaml
@@ -44,6 +44,14 @@
             </StackPanel>
 
             <StackPanel Margin="15">
+                <CheckBox IsChecked="{Binding DoBackupDuringPlay}" Content="{Binding DoBackupDuringPlay_Label}" />
+                <StackPanel Margin="0,2,0,0" Orientation="Horizontal">
+                    <Label Margin="25,2,0,0" Content="{Binding BackupDuringPlayInterval_Label}" />
+                    <TextBox Margin="10,2,0,0" MinWidth="50" Text="{Binding BackupDuringPlayInterval}" />
+                </StackPanel>
+            </StackPanel>
+
+            <StackPanel Margin="15">
                 <CheckBox IsChecked="{Binding IgnoreBenignNotifications}" Content="{Binding IgnoreBenignNotifications_Label}" />
             </StackPanel>
         </StackPanel>
