#55: Add option to tag games with unknown save data

--- a/src/LudusaviPlayniteSettingsView.xaml
+++ b/src/LudusaviPlayniteSettingsView.xaml
@@ -68,6 +68,7 @@
 
             <StackPanel Margin="15">
                 <CheckBox IsChecked="{Binding TagGamesWithBackups}" Content="{Binding TagGamesWithBackups_Label}" />
+                <CheckBox IsChecked="{Binding TagGamesWithUnknownSaveData}" Content="{Binding TagGamesWithUnknownSaveData_Label}" />
                 <CheckBox Margin="0,2,0,0" IsChecked="{Binding DoBackupDuringPlay}" Content="{Binding DoBackupDuringPlay_Label}" />
                 <StackPanel Margin="0,2,0,0" Orientation="Horizontal">
                     <Label Margin="25,2,0,0" Content="{Binding BackupDuringPlayInterval_Label}" />
